# phoxia-auditlog

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
.phoxia/: project.yaml
docs/: PHOXIA-AUDIT.md
docs/records/: FEAT-0001-axum-audit-middleware.md
examples/: basic.rs
src/: auditable.rs  config.rs  context.rs  event.rs  layer.rs  lib.rs  service.rs  writer.rs
tests/: integration.rs
