[package]
name = "phoxia-auditlog"
version = "0.1.0"
edition = "2021"
description = "Tower middleware for automatic audit logging in Axum apps. Append-only, batch-written, zero external services."
license = "AGPL-3.0"
repository = "https://github.com/phoxia/phoxia-auditlog"
documentation = "https://docs.rs/phoxia-auditlog"
readme = "README.md"
keywords = ["audit", "logging", "tower", "axum", "middleware"]
categories = ["development-tools", "web-programming"]

[dependencies]
tower-layer = "0.3"
tower-service = "0.3"
axum-core = "0.4"
http = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "macros", "time", "rt"] }
tracing = "0.1"

[dev-dependencies]
axum = "0.7"
tower = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[features]
default = []
integration = []
